
517) A new tag, NOEXEC, will prevent a dynamically-linked program being run
     by sudo from executing another program (think shell escapes).
     Because this uses LD_PRELOAD it has no effect on static binaries.
     Idea from Reznic Valery.

518) TIS fwtk authentication now supports fwtk 2.0 and higher.

519) Sudo will now try to stat the command to be run as the user
     specified by the -u flag if the stat fails as root.  Fixes
     an NFS issue.

520) Added Stan Lee / Uncle Ben quote to the lecture (from RedHat).

521) Added a -i option to simulate an initial login similar to "su -".
     Originally based on a patch from David J. MacKenzie.

522) Added a -e option to edit files the with uid of the invoking user.
     This prevents the user from editing other files or running commands
     as the target user.  If sudo is run as "sudoedit" the -e flag is implied.

523) If sudo is used to run as root shell, further sudo commands will
     be logged as run by the user specified by the SUDO_USER environment
     variable.  In -e mode (sudoedit), SUDO_USER is used to determine
     what user to run the editor when the real uid is 0.

524) Merged in LDAP support from Aaron Spangler.

525) Added the --with-pc-insults configure to replace politically
     incorrect insults with other ones.

526) Added start_tls support from Gudleik Rasch <gudleik@rastamatra.org>.

527) A uid specified in sudoers now matches the user specified by the
     -u flag even if the -u flag specified a name, not a uid.

528) /tmp/.odus is no longer used for timestamps by default.  One of
     /var/run/sudo, /var/adm/sudo or /usr/adm/sudo is used depending
     on what directories exist.

529) Quoting globbing characters with a backslash now works as documented.

530) A negated user/uid in a runas list was not treated the same as a
     negated command (it did not override a previously allowed entry).
     Now it does.

531) Added support for Tandem NSK and other systems w/o seteuid().