@@ -1690,3 +1690,5 @@ Sudo 1.6.7p5 released.
      Now it does.
 
 531) Added support for Tandem NSK and other systems w/o seteuid().
+
+532) The timeout on password reading is now done via alarm(), not select().
